--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
-    "vue": "^2.6.10"
+    "jquery": "^3.4.1",
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.4"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^3.0.2",
+    "vue-template-compiler": "^2.6.10"
   }
 }
