--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
+    "sweetalert2": "^9.4.3",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
